--- a/templates/kenningtonlaw/index.html
+++ b/templates/kenningtonlaw/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="article">
 	<h1>Now specializing in immigration law</h1>
-	<img src="/static/images/office_window.jpg" alt="Picture of office window">
+	<img src="/static/images/RobertChair.png" alt="Picture of office window">
 	<p>
 		We are here to meet your needs.
 	</p>
