update home page and image

--- a/templates/kenningtonlaw/index.html
+++ b/templates/kenningtonlaw/index.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div class="article">
+	<img class="profile-pic" src="/static/images/RobertChair.png" alt="Picture of office window">
 	<h1>Now specializing in immigration law</h1>
-	<img src="/static/images/RobertChair.png" alt="Picture of office window">
 	<p>
 		We are here to meet your needs.
 	</p>
