update home page title

--- a/templates/kenningtonlaw/index.html
+++ b/templates/kenningtonlaw/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="article">
 	<img class="profile-pic" src="/static/images/RobertChair.png" alt="Picture of office window">
-	<h1>Now specializing in immigration law</h1>
+	<span class="article-title">Now specializing in immigration law</span>
 	<p>
 		We are here to meet your needs.
 	</p>
