--- a/templates/kenningtonlaw/base.html
+++ b/templates/kenningtonlaw/base.html
@@ -54,7 +54,7 @@
 			</div>
 			<div class="footer">
 				<p>
-					{{ disclaimer.content }}
+					{{ disclaimer.content|linebreaks }}
 				</p>
 			</div>
 		</div>
