change index and profile pages to populate based on content table

--- a/templates/kenningtonlaw/index.html
+++ b/templates/kenningtonlaw/index.html
@@ -4,19 +4,6 @@
 <div class="article">
 	<img class="profile-pic" src="/static/images/RobertChair.png" alt="Picture of office window">
 	<span class="article-title">Now specializing in immigration law</span>
-	<p>
-		We are here to meet your needs.
-	</p>
-	<p>
-		For over 12 years, attorney Robert J. Kennington, has been an advocate for the client in the courtroom,
-		counseling and representing their best interests. He has practiced in eastern, central and now in southwest Kansas.
-		He truly knows Kansas.
-	</p>
-	<p>
-		Mr. Kennington has moved his office to a new location at 1115 Kansas Plaza #C, Garden City, Kansas.
-	</p>
-	<p>
-		Set up a free consultation today. Call his office at 620-277-8630
-	</p>
+	{{ content.description|linebreaks }}
 </div>
 {% endblock %}
