make the two asides configurable

--- a/templates/kenningtonlaw/base.html
+++ b/templates/kenningtonlaw/base.html
@@ -34,23 +34,10 @@
 			</div>
 
 			<div class="aside">
-				Abogado Se Habla Espa&ntilde;ol
+				{{ spanish.description}}
 			</div>
 			<div class="aside">
-				<p>
-					Call (620) 277-8630
-				</p>
-				<p>1115 Kansas Plaza #C<br>
-					PO BOX 2263<br>
-					Garden City, KS 67846<br>
-					FAX # (866) 377-6835
-				</p>
-				<p>
-					Hours: Monday-Friday 8-5
-				</p>
-				<p>
-					Evenings and weekends by appointment.
-				</p>
+				{{ contact.description|linebreaks }}
 			</div>
 			<div class="footer">
 				<p>
