update address on directions page

--- a/templates/kenningtonlaw/directions.html
+++ b/templates/kenningtonlaw/directions.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="article">
-	<h1>1115 E. Kansas Plaza, Ste. C, Garden City, Kansas 67846</h1>
+	<h1>1115 E. Kansas Plaza, Ste. C, Garden City, KS 67846</h1>
 
 	<iframe width="770" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=1115+Kansas+Plaza+%23C,+Garden+City,+Kansas&amp;ie=UTF8&amp;hq=&amp;hnear=1115+E+Kansas+Plaza,+Garden+City,+Kansas+67846&amp;gl=us&amp;t=m&amp;z=14&amp;ll=37.97518,-100.860016&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?q=1115+Kansas+Plaza+%23C,+Garden+City,+Kansas&amp;ie=UTF8&amp;hq=&amp;hnear=1115+E+Kansas+Plaza,+Garden+City,+Kansas+67846&amp;gl=us&amp;t=m&amp;z=14&amp;ll=37.97518,-100.860016&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
 </div>
